# ai-sql-reviewer-hook

./: .pre-commit-hooks.yaml  MANIFEST.in  README.md  pyproject.toml
src/ai_code_checker/: ai_code_reviewer.py  system_context.md
