# ai-sql-reviewer-hook/pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"] # For building wheels
build-backend = "setuptools.build_meta"

[project]
name = "ai-sql-reviewer-hook"
version = "0.1.0" # Make sure this matches your Git tag if you have one
description = "AI SQL Reviewer for pre-commit"
requires-python = ">=3.8" # Specify a compatible Python version
dependencies = [
    "google-genai>=1.29.0", # List your main dependency here
    # If your script had other dependencies, list them too.
]